<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|center_horizontal|fill_vertical"
    android:background="@drawable/tlo"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img1"
        android:layout_marginTop="24dp"
        android:layout_width="156dp"
        android:layout_height="157dp"
        android:layout_marginBottom="16dp"
        tools:ignore="ImageContrastCheck"
        android:src="@drawable/l"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/hello"
        android:text="@string/hello"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:textColor="#141A3C"
        android:textSize="34sp" />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:autofillHints="Name"
        android:backgroundTint="#141A3C"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textColor="#141A3C"
        android:fontFamily="serif"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/user_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:autofillHints="Last Name"
        android:backgroundTint="#141A3C"
        android:textColor="#141A3C"
        android:ems="10"
        android:hint="@string/user_lastname"
        android:inputType="text"
        android:fontFamily="serif"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/user_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:autofillHints="Age"
        android:textColor="#141A3C"
        android:backgroundTint="#141A3C"
        android:ems="10"
        android:hint="@string/user_age"
        android:inputType="text"
        android:fontFamily="serif"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#141A3C"
        android:fontFamily="serif"
        android:padding="5dp"
        android:text="@string/save"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#141A3C"
        android:padding="5dp"
        android:text="@string/back"
        android:fontFamily="serif"
        android:textColor="@color/white"/>

</LinearLayout>