<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|fill_vertical"
        android:background="@drawable/tlo"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/img1"
        android:layout_marginTop="64dp"
        android:layout_width="156dp"
        android:layout_height="157dp"
        android:layout_marginBottom="16dp"
        tools:ignore="ImageContrastCheck"
        android:src="@drawable/l"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/app_idNewApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:autofillHints="Name"
        android:backgroundTint="#141A3C"
        android:ems="10"
        android:hint="@string/appid"
        android:inputType="text"
        android:fontFamily="serif"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/appdateNewApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:autofillHints="Last Name"
        android:backgroundTint="#141A3C"
        android:ems="10"
        android:hint="@string/appdate"
        android:inputType="text"
        android:fontFamily="serif"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/app_descriptionNewApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:autofillHints="Age"
        android:backgroundTint="#141A3C"
        android:ems="10"
        android:hint="@string/appdescription"
        android:inputType="text"
        android:fontFamily="serif"
        android:minHeight="48dp" />
    <EditText
        android:id="@+id/app_humorNewApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:autofillHints="Name"
        android:backgroundTint="#141A3C"
        android:ems="10"
        android:hint="@string/humor"
        android:inputType="text"
        android:fontFamily="serif"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/app_medicationsNewApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:autofillHints="Last Name"
        android:backgroundTint="#141A3C"
        android:ems="10"
        android:hint="@string/medications"
        android:inputType="text"
        android:fontFamily="serif"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/saveappNewApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#141A3C"
        android:padding="5dp"
        android:text="@string/save"
        android:fontFamily="serif"
        android:textColor="@color/white" />

        <Button
            android:id="@+id/backNewApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#141A3C"
            android:padding="5dp"
            android:text="@string/back"
            android:fontFamily="serif"
            android:textColor="@color/white"/>


</LinearLayout>
</ScrollView>