<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|center_horizontal|fill_vertical"
    android:background="@drawable/tlo"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img1"
        android:layout_marginTop="64dp"
        android:layout_width="156dp"
        android:layout_height="157dp"
        android:layout_marginBottom="16dp"
        tools:ignore="ImageContrastCheck"
        android:src="@drawable/l"
        android:contentDescription="@string/logo" />

    <Button
        android:id="@+id/mydata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#141A3C"
        android:padding="5dp"
        android:text="@string/mydata"
        android:fontFamily="serif"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/Pappointments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#141A3C"
        android:padding="5dp"
        android:text="@string/appointments"
        android:fontFamily="serif"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/logoutPat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#141A3C"
        android:padding="5dp"
        android:text="@string/logout"
        android:fontFamily="serif"
        android:textColor="@color/white" />

</LinearLayout>
</ScrollView>