<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|fill_vertical"
        android:background="@drawable/tlo"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img1"
            android:layout_marginTop="64dp"
            android:layout_width="156dp"
            android:layout_height="157dp"
            android:layout_marginBottom="16dp"
            tools:ignore="ImageContrastCheck"
            android:src="@drawable/l"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/app_enteruser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="serif"
            android:text="@string/appointmentuser"
            android:textAlignment="center"
            android:textColor="#141A3C"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/app_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="0dp"
            android:autofillHints="Name"
            android:backgroundTint="#141A3C"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/mail"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#141A3C" />

        <TextView
            android:id="@+id/appdocid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="serif"
            android:text="@string/appointmentid"
            android:textAlignment="center"
            android:textColor="#141A3C"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/appenterdocid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="0dp"
            android:autofillHints="Name"
            android:backgroundTint="#141A3C"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/appid"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#141A3C" />


        <TextView
            android:id="@+id/calendarshowpat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="serif"
            android:text=""
            android:textAlignment="textStart"
            android:textColor="#141A3C"
            android:textSize="24sp" />



        <Button
            android:id="@+id/showinfodoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#141A3C"
            android:padding="5dp"
            android:text="@string/showinfo"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/backDoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#141A3C"
            android:padding="5dp"
            android:text="@string/back"
            android:fontFamily="serif"
            android:textColor="@color/white"/>


    </LinearLayout>
</ScrollView>